# ram-machine

./: .coverage  README.md  lint.sh  main.py  pyproject.toml  refresh_ui.sh  test.sh
ram_machine/: command.py  program.py  register.py  tapes.py  ui.py
saved_states/: deadlock.json  max.json  mul.json  sum.json
tests/: test_command.py  test_integ_program.py  test_program.py  test_register.py  test_tapes.py
ui/: ram_machine.ui
