[tool.poetry]
name = "ram-machine"
version = "0.1.0"
description = ""
authors = ["Pavel <barabanovpv95@gmail.com>"]
readme = "README.md"
packages = [{include = "ram_machine"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6-tools = "^6.4.2.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.282"
mypy = "^1.4.1"
isort = "^5.12.0"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["tests/"]

[tool.pytest]
log-cli = true
